--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -15,4 +15,15 @@
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
+<!-- sorry bro but i really wonder who's coming -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P7FMTQ4R3C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-P7FMTQ4R3C');
+</script>
+
 </html>
