--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Arcades are special nfts that you name. And it can be recycled to turn into scrap tokens" />
+
   <link rel="icon" type="image/png" href="/images/Arcades.png" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
